All issues fixed except 1. If user attempts search that does not match correct shape of search criterion, search takes users to empty results page. Attempted to resolve this issue unsuccessfully. Was able to resolve all other issues uncovered during the course of user experience.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,7 @@
 
 .container,
 .container-author-results,
+.container-category-results,
 .container-search,
 .container-header {
   margin: 0 auto;
@@ -39,6 +40,7 @@
 
   .container,
   .container-search,
+  .container-category-results,
   .container-author-results {
     max-width: 1300px;
   }
